# foreach_Bot

./: .env  app.py  loader.py  pyproject.toml
data/: config.py
foreach_django/: manage.py
foreach_django/foreach_django/: asgi.py  settings.py  urls.py  wsgi.py
foreach_django/informations/: admin.py  models.py  utils.py
foreach_django/informations/migrations/: 0001_initial.py  0002_alter_kurslar_options_kurslar_matn_kurslar_rasm.py  0003_obunachilar_last_active_at.py  0004_remove_malumotlar_latest_news.py  0005_alter_obunachilar_language.py
handlers/admins/: __init__.py  admin.py  kurs_qushish.py  kursni_ochirish.py  kursni_tah.py  other.py  remove_admin.py  statistika.py  user_all_reklama.py  user_id_reklama.py
handlers/users/: __init__.py  kurslar.py  manzil.py  not_state.py  sozlama.py  start.py
keyboards/default/: admin_menu.py  all_user.py  bekor_qilish.py  contact.py  get_admin.py  kurs_tahrirlash.py  menu.py  sozlama.py  til.py  users.py
keyboards/inline/: admin.py  aloqa.py  aloqaga_chiq.py  confirm_buttons.py  getAdmin.py  kurslar.py  reklama.py
middlewares/: throttling.py
utils/db_api/: postgres.py
utils/misc/: belgi.py
